--- a/mainwebsite/templates/dashboard/body_page_include/App-Header.html
+++ b/mainwebsite/templates/dashboard/body_page_include/App-Header.html
@@ -1,81 +1,112 @@
-  
 {% load static %}
-
 
 <!--App-Header-->
 <div class="app-header1 header py-1 d-flex">
-    <div class="container-fluid">
-        <div class="d-flex">
-            <a class="header-brand" href="/">
-                <img src="{% static 'dashboard/images/brand/zhonghualogo.png' %}" class="header-brand-img" alt="Zhonghua logo">
-            </a>
-            <a aria-label="Hide Sidebar" class="app-sidebar__toggle" data-toggle="sidebar" href="#"></a>
-            
-            <div class="d-flex order-lg-2 ml-auto">
-                <div class="dropdown d-none d-md-flex" >
-                    <a  class="nav-link icon full-screen-link">
-                        <i class="fe fe-maximize-2"  id="fullscreen-button"></i>
-                    </a>
-                </div>
-                <div class="dropdown d-none d-md-flex">
-                    <a class="nav-link icon" data-toggle="dropdown">
-                        <i class="fa fa-envelope-o"></i>
-                        <span class=" nav-unread badge badge-warning  badge-pill">3</span>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
-                        <a href="#" class="dropdown-item d-flex pb-3">
-                            <img src="{% static 'dashboard/images/faces/male/41.jpg' %}" alt="avatar-img" class="avatar brround mr-3 align-self-center">
-                            <div>
-                                <strong>Blake</strong> I've finished it! See you so.......
-                                <div class="small text-muted">30 mins ago</div>
-                            </div>
-                        </a>
-                        <a href="#" class="dropdown-item d-flex pb-3">
-                            <img src="{% static 'dashboard/images/faces/female/1.jpg' %}" alt="avatar-img" class="avatar brround mr-3 align-self-center">
-                            <div>
-                                <strong>Caroline</strong> Just see the my Admin....
-                                <div class="small text-muted">12 mins ago</div>
-                            </div>
-                        </a>
-                        <a href="#" class="dropdown-item d-flex pb-3">
-                            <img src="{% static 'dashboard/images/faces/male/18.jpg' %}" alt="avatar-img" class="avatar brround mr-3 align-self-center">
-                            <div>
-                                <strong>Jonathan</strong> Hi! I'am singer......
-                                <div class="small text-muted">1 hour ago</div>
-                            </div>
-                        </a>
-                        <a href="#" class="dropdown-item d-flex pb-3">
-                            <img src="{% static 'dashboard/images/faces/female/18.jpg' %}" alt="avatar-img" class="avatar brround mr-3 align-self-center">
-                            <div>
-                                <strong>Emily</strong> Just a reminder that you have.....
-                                <div class="small text-muted">45 mins ago</div>
-                            </div>
-                        </a>
-                        <div class="dropdown-divider"></div>
-                        <a href="#" class="dropdown-item text-center">View all Messages</a>
-                    </div>
-                </div>
-                <div class="dropdown ">
-                    <a href="#" class="nav-link pr-0 leading-none user-img" data-toggle="dropdown">
-                        <img src="{% static 'dashboard/images/brand/dashboardicon.jpg' %}" alt="profile-img" class="avatar avatar-md brround">
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow ">
-                        <a class="dropdown-item" href="/admin-profile">
-                            <i class="dropdown-icon icon icon-user"></i> My Profile
-                        </a>
-                        <a class="dropdown-item" href="emailservices.html">
-                            <i class="dropdown-icon icon icon-speech"></i> Inbox
-                        </a>
-                        <a class="dropdown-item" href="editprofile.html">
-                            <i class="dropdown-icon  icon icon-settings"></i> Account Settings
-                        </a>
-                        <a class="dropdown-item" href="{% url 'logout' %}">
-                            <i class="dropdown-icon icon icon-power"></i> Log out
-                        </a>
-                    </div>
-                </div>
-            </div>
+  <div class="container-fluid">
+    <div class="d-flex">
+      <a class="header-brand" href="/">
+        <img
+          src="{% static 'dashboard/images/brand/moonda-logo-white.png' %}"
+          class="header-brand-img"
+          alt="Zhonghua logo"
+        />
+      </a>
+      <a
+        aria-label="Hide Sidebar"
+        class="app-sidebar__toggle"
+        data-toggle="sidebar"
+        href="#"
+      ></a>
+
+      <div class="d-flex order-lg-2 ml-auto">
+        <div class="dropdown d-none d-md-flex">
+          <a class="nav-link icon full-screen-link">
+            <i class="fe fe-maximize-2" id="fullscreen-button"></i>
+          </a>
         </div>
+        <div class="dropdown d-none d-md-flex">
+          <a class="nav-link icon" data-toggle="dropdown">
+            <i class="fa fa-envelope-o"></i>
+            <span class="nav-unread badge badge-warning badge-pill">3</span>
+          </a>
+          <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
+            <a href="#" class="dropdown-item d-flex pb-3">
+              <img
+                src="{% static 'dashboard/images/faces/male/41.jpg' %}"
+                alt="avatar-img"
+                class="avatar brround mr-3 align-self-center"
+              />
+              <div>
+                <strong>Blake</strong> I've finished it! See you so.......
+                <div class="small text-muted">30 mins ago</div>
+              </div>
+            </a>
+            <a href="#" class="dropdown-item d-flex pb-3">
+              <img
+                src="{% static 'dashboard/images/faces/female/1.jpg' %}"
+                alt="avatar-img"
+                class="avatar brround mr-3 align-self-center"
+              />
+              <div>
+                <strong>Caroline</strong> Just see the my Admin....
+                <div class="small text-muted">12 mins ago</div>
+              </div>
+            </a>
+            <a href="#" class="dropdown-item d-flex pb-3">
+              <img
+                src="{% static 'dashboard/images/faces/male/18.jpg' %}"
+                alt="avatar-img"
+                class="avatar brround mr-3 align-self-center"
+              />
+              <div>
+                <strong>Jonathan</strong> Hi! I'am singer......
+                <div class="small text-muted">1 hour ago</div>
+              </div>
+            </a>
+            <a href="#" class="dropdown-item d-flex pb-3">
+              <img
+                src="{% static 'dashboard/images/faces/female/18.jpg' %}"
+                alt="avatar-img"
+                class="avatar brround mr-3 align-self-center"
+              />
+              <div>
+                <strong>Emily</strong> Just a reminder that you have.....
+                <div class="small text-muted">45 mins ago</div>
+              </div>
+            </a>
+            <div class="dropdown-divider"></div>
+            <a href="#" class="dropdown-item text-center">View all Messages</a>
+          </div>
+        </div>
+        <div class="dropdown">
+          <a
+            href="#"
+            class="nav-link pr-0 leading-none user-img"
+            data-toggle="dropdown"
+          >
+            <img
+              src="{% static 'dashboard/images/brand/dashboardicon.png' %}"
+              alt="profile-img"
+              class="avatar avatar-md brround"
+            />
+          </a>
+          <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
+            <a class="dropdown-item" href="/admin-profile">
+              <i class="dropdown-icon icon icon-user"></i> My Profile
+            </a>
+            <a class="dropdown-item" href="emailservices.html">
+              <i class="dropdown-icon icon icon-speech"></i> Inbox
+            </a>
+            <a class="dropdown-item" href="editprofile.html">
+              <i class="dropdown-icon icon icon-settings"></i> Account Settings
+            </a>
+            <a class="dropdown-item" href="{% url 'logout' %}">
+              <i class="dropdown-icon icon icon-power"></i> Log out
+            </a>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
 </div>
 <!--/App-Header-->
