--- a/mainwebsite/templates/mainwebsite/base/base.html
+++ b/mainwebsite/templates/mainwebsite/base/base.html
@@ -19,7 +19,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Zhonghua &#8211; Company</title>
+    <title>Moonda Company</title>
 
     <!-- Bootstrap Css -->
     <link
@@ -97,7 +97,7 @@
     <!-- Favicon -->
     <link
       rel="icon"
-      href="{% static 'dashboard/images/brand/favicon.ico' %}"
+      href="{% static 'dashboard/images/brand/moonda-logo.ico' %}"
       type="image/x-icon"
     />
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
@@ -117,20 +117,20 @@
             <div class="corzo-logo-inner">
               <a class="corzo-fixed-nav-logo" href="{% url 'home' %}">
                 <img
-                  src="{% static 'mainwebsite/upload/zhonghualogo.png'%}"
+                  src="{% static 'mainwebsite/upload/moonda-logo.png'%}"
                   alt=""
                   width="123"
                   height="31"
-                  title="zhonghualogo"
+                  title="moondalogo"
                 />
               </a>
               <a class="corzo-orig-logo" href="{% url 'home' %}">
                 <img
-                  src="{% static 'mainwebsite/upload/zhonghualogo.png'%}"
+                  src="{% static 'mainwebsite/upload/moonda-logo.png'%}"
                   alt=""
                   width="123"
                   height="31"
-                  title="zhonghualogo"
+                  title="moondalogo"
                 />
               </a>
             </div>
@@ -201,7 +201,7 @@
                       class="fa fa-phone"
                       style="
                         font-size: 19px;
-                        color: #d32525;
+                        color: #f5831c;
                         margin-right: 10px;
                       "
                     ></i
@@ -210,7 +210,7 @@
                       class="fa fa-clock-o"
                       style="
                         font-size: 19px;
-                        color: #d32525;
+                        color: #f5831c;
                         margin-left: 20px;
                         margin-right: 10px;
                       "
@@ -224,13 +224,13 @@
                       class="fa5s fa5-envelope-open"
                       style="
                         font-size: 19px;
-                        color: #d32525;
+                        color: #f5831c;
                         margin-left: 20px;
                         margin-right: 10px;
                       "
                     ></i>
-                    <a href="mailto:zhonghuagh@gmail.com" class="__cf_email__"
-                      >zhonghuagh@gmail.com</a
+                    <a href="mailto:Moondagh@gmail.com" class="__cf_email__"
+                      >moondagh@gmail.com</a
                     >
                   </div>
                   <div class="corzo-top-bar-right-social">
@@ -272,20 +272,20 @@
                   <div class="corzo-logo-inner">
                     <a class="corzo-fixed-nav-logo" href="{% url 'home' %}">
                       <img
-                        src="{% static 'mainwebsite/upload/zhonghualogo.png'%}"
+                        src="{% static 'mainwebsite/upload/moonda-logo.png'%}"
                         alt=""
                         width="123"
                         height="31"
-                        title="zhonghualogo"
+                        title="Moondalogo"
                       />
                     </a>
                     <a class="corzo-orig-logo" href="{% url 'home' %}">
                       <img
-                        src="{% static 'mainwebsite/upload/zhonghualogo.png'%}"
+                        src="{% static 'mainwebsite/upload/moonda-logo.png'%}"
                         alt=""
                         width="123"
                         height="31"
-                        title="zhonghualogo"
+                        title="Moondalogo"
                       />
                     </a>
                   </div>
@@ -375,11 +375,11 @@
                     <p>
                       <img
                         loading="lazy"
-                        src="{% static 'mainwebsite/upload/zhonghualogo.png'%}"
+                        src="{% static 'mainwebsite/upload/moonda-logo.png'%}"
                         alt=""
                         width="123"
                         height="31"
-                        title="zhonghualogo"
+                        title="moondalogo"
                       />
                     </p>
                     <p>
@@ -496,10 +496,8 @@
                           font-weight: 600;
                         "
                       >
-                        <a
-                          href="mailto:zhonghuagh@gmail.com"
-                          class="__cf_email__"
-                          >zhonghuagh@gmail.com</a
+                        <a href="mailto:moondagh@gmail.com" class="__cf_email__"
+                          >moondagh@gmail.com</a
                         >
                       </span>
                       <br />
@@ -594,7 +592,11 @@
                     <i class="fa fa-instagram"></i>
                   </a>
                 </div>
-                <span class="gdlr-core-space-shortcode" style="margin-top: 20px" id="copyright">© 2022 Zhonghua, Ghana.</span
+                <span
+                  class="gdlr-core-space-shortcode"
+                  style="margin-top: 20px"
+                  id="copyright"
+                  >© 2022 moonda, Ghana.</span
                 >
               </div>
             </div>
@@ -875,11 +877,11 @@
           slider.style.display = "block";
         }
       }
-      document.addEventListener("DOMContentLoaded", function() {
+      document.addEventListener("DOMContentLoaded", function () {
         var year = new Date().getFullYear();
         var copyright = document.getElementById("copyright");
-        copyright.innerHTML = "&copy; " + year + " ZHONGHUA, GHANA";
-    });
+        copyright.innerHTML = "&copy; " + year + " MOONDA, GHANA";
+      });
     </script>
     <!-- Bootstrap js -->
     <script src="{% static 'mainwebsite/plugins/bootstrap-4.3.1-dist/js/popper.min.js' %}"></script>
