--- a/mainwebsite/static/dashboard/css/color.css
+++ b/mainwebsite/static/dashboard/css/color.css
@@ -33,8 +33,8 @@
 }
  .btn-primary:hover {
 	color: #fff;
-	background-color: #820000;
-	border-color: #820000;
+	background-color: #F5831C;
+	border-color: #F5831C;
 }
  .btn-primary:focus,   .btn-primary.focus {
 	box-shadow: 0 0 0 2px rgb(249, 100, 121,0.5);
@@ -240,7 +240,7 @@
 	color: #ed5151   ;
 }
  .header {
-	background-color: #820000;
+	background-color: #F5831C;
 }
  .header-bg {
 	background: #eef2f9;
@@ -921,18 +921,18 @@
 }
 
  .app-sidebar .side-menu__item.active {
-	background:#820000 !important;
+	background:#F5831C !important;
 	color: #fff !important;
 }
  .app-sidebar .side-menu__item.active:hover {
-	background:#820000 !important;
+	background:#F5831C !important;
 	color: #fff !important;
 }
  .app-sidebar:before {
-	background:#820000;
+	background:#F5831C;
 }
  .app-sidebar-footer {
-	background:#820000;
+	background:#F5831C;
 }
  .masthead .masthead-bg {
 	background:linear-gradient(-225deg, rgba(74, 61, 184, 0.8) 48%, rgba(50, 228, 179, 0.8) 100%) !important;
@@ -1119,11 +1119,11 @@
 }
 @media (min-width:992px) {
 	.sticky-wrapper.is-sticky .horizontal-main {
-		background: #820000;
+		background: #F5831C;
 	}
 }
 .horizontal-main{
-	background: #820000;
+	background: #F5831C;
 }
 .bg-card-light:hover {
     border-color: #ed5151;
