--- a/mainwebsite/templates/mainwebsite/about.html
+++ b/mainwebsite/templates/mainwebsite/about.html
@@ -50,9 +50,9 @@
                                             <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr">
                                                 <span
                                                     class="gdlr-core-title-item-caption gdlr-core-info-font gdlr-core-skin-caption"
-                                                    style="font-size: 14px; font-weight: 500; font-style: normal; letter-spacing: 3px; text-transform: uppercase; color: #d32525;"
+                                                    style="font-size: 14px; font-weight: 500; font-style: normal; letter-spacing: 3px; text-transform: uppercase; color: #F5831C;"
                                                 >
-                                                    <span class="gdlr-core-title-item-caption-prefix" style="border-color: #d32525; height: 13px; margin-right: 14px;"></span>{{homewhyus.headingTag}}
+                                                    <span class="gdlr-core-title-item-caption-prefix" style="border-color: #F5831C; height: 13px; margin-right: 14px;"></span>{{homewhyus.headingTag}}
                                                 </span>
                                                 <div class="gdlr-core-title-item-title-wrap">
                                                     <h3 class="gdlr-core-title-item-title gdlr-core-skin-title" style="font-size: 45px; font-weight: 500; letter-spacing: 0px; text-transform: none; color: #1b1b1b;">
@@ -74,7 +74,7 @@
                                         <div class="gdlr-core-pbf-element">
                                             <div class="gdlr-core-button-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align" style="padding-bottom: 0px;">
                                                 <a class="gdlr-core-button gdlr-core-button-transparent gdlr-core-left-align gdlr-core-button-no-border" href="#" id="gdlr-core-button-id-59118">
-                                                    <span class="gdlr-core-content">Call Now</span><i class="gdlr-core-pos-right ion-ios-arrow-thin-right" style="font-size: 31px; color: #d32525;"></i>
+                                                    <span class="gdlr-core-content">Call Now</span><i class="gdlr-core-pos-right ion-ios-arrow-thin-right" style="font-size: 31px; color: #F5831C;"></i>
                                                 </a>
                                             </div>
                                         </div>
@@ -109,7 +109,7 @@
                                 <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js">
                                     <div class="gdlr-core-pbf-element">
                                         <div class="gdlr-core-divider-item gdlr-core-divider-item-normal gdlr-core-item-pdlr gdlr-core-center-align" style="margin-bottom: 0px;">
-                                            <div class="gdlr-core-divider-container" style="max-width: 1px;"><div class="gdlr-core-divider-line gdlr-core-skin-divider" style="border-color: #d32525; border-width: 100px;"></div></div>
+                                            <div class="gdlr-core-divider-container" style="max-width: 1px;"><div class="gdlr-core-divider-line gdlr-core-skin-divider" style="border-color: #F5831C; border-width: 100px;"></div></div>
                                         </div>
                                     </div>
                                 </div>
@@ -152,9 +152,9 @@
                                             <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr" style="padding-bottom: 35px;">
                                                 <span
                                                     class="gdlr-core-title-item-caption gdlr-core-info-font gdlr-core-skin-caption"
-                                                    style="font-size: 14px; font-weight: 500; font-style: normal; letter-spacing: 3px; text-transform: uppercase; color: #d32525;"
+                                                    style="font-size: 14px; font-weight: 500; font-style: normal; letter-spacing: 3px; text-transform: uppercase; color: #F5831C;"
                                                 >
-                                                    <span class="gdlr-core-title-item-caption-prefix" style="border-color: #d32525; height: 13px; margin-right: 14px;"></span>{{homeaboutus.headingTag}}
+                                                    <span class="gdlr-core-title-item-caption-prefix" style="border-color: #F5831C; height: 13px; margin-right: 14px;"></span>{{homeaboutus.headingTag}}
                                                 </span>
                                                 <div class="gdlr-core-title-item-title-wrap">
                                                     <h3 class="gdlr-core-title-item-title gdlr-core-skin-title" style="font-size: 45px; font-weight: 500; letter-spacing: 0px; text-transform: none; color: #1b1b1b;">
@@ -210,7 +210,7 @@
                                                         border-radius: 30px;
                                                         -moz-border-radius: 30px;
                                                         -webkit-border-radius: 30px;
-                                                        background: #d32525;
+                                                        background: #F5831C;
                                                     "
                                                 >
                                                     <span class="gdlr-core-content">Get Consult</span><i class="gdlr-core-pos-right ion-ios-arrow-thin-right" style="font-size: 31px; color: #ffffff;"></i>
@@ -252,7 +252,7 @@
                                         <div class="gdlr-core-pbf-element">
                                             <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr" style="padding-bottom: 50px;">
                                                 <div class="gdlr-core-title-item-title-wrap">
-                                                    <h3 class="gdlr-core-title-item-title gdlr-core-skin-title" style="font-size: 14px; font-weight: 500; letter-spacing: 2px; color: #d32525;">
+                                                    <h3 class="gdlr-core-title-item-title gdlr-core-skin-title" style="font-size: 14px; font-weight: 500; letter-spacing: 2px; color: #F5831C;">
                                                         {{summary.title}}<span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span>
                                                     </h3>
                                                 </div>
@@ -263,7 +263,7 @@
                                                 <div class="gdlr-core-divider-container" style="max-width: 110px;">
                                                     <div
                                                         class="gdlr-core-divider-line gdlr-core-skin-divider"
-                                                        style="border-color: #d32525; border-width: 3px; border-radius: 0px; -moz-border-radius: 0px; -webkit-border-radius: 0px;"
+                                                        style="border-color: #F5831C; border-width: 3px; border-radius: 0px; -moz-border-radius: 0px; -webkit-border-radius: 0px;"
                                                     ></div>
                                                 </div>
                                             </div>
