--- a/mainwebsite/templates/mainwebsite/index.html
+++ b/mainwebsite/templates/mainwebsite/index.html
@@ -37,7 +37,7 @@
                                                 data-dim="h:auto,auto,auto,33px;minh:0px,0px,none,none;"
                                                 data-frame_1="st:820;sR:820;"
                                                 data-frame_999="o:0;st:w;sR:7880;"
-                                                data-frame_hover="c:#d32525;bor:0px,0px,0px,0px;bri:120%;"
+                                                data-frame_hover="c:#F5831C;bor:0px,0px,0px,0px;bri:120%;"
                                                 style="z-index: 9; font-family: Jost;"
                                             >
                                                 Learn More About Us <i class="fa-long-arrow-right" style="margin-left: 11px; font-size: 22px;"></i>
@@ -107,9 +107,9 @@
                                     <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr" style="padding-bottom: 0px;">
                                         <span
                                             class="gdlr-core-title-item-caption gdlr-core-info-font gdlr-core-skin-caption"
-                                            style="font-size: 14px; font-weight: 500; font-style: normal; letter-spacing: 3px; text-transform: uppercase; color: #d32525; margin-bottom: 5px;"
+                                            style="font-size: 14px; font-weight: 500; font-style: normal; letter-spacing: 3px; text-transform: uppercase; color: #F5831C; margin-bottom: 5px;"
                                         >
-                                            <span class="gdlr-core-title-item-caption-prefix" style="border-color: #d32525; height: 13px; margin-right: 14px;"></span>What we do
+                                            <span class="gdlr-core-title-item-caption-prefix" style="border-color: #F5831C; height: 13px; margin-right: 14px;"></span>What we do
                                         </span>
                                         <div class="gdlr-core-title-item-title-wrap">
                                             <h3 class="gdlr-core-title-item-title gdlr-core-skin-title" style="font-size: 42px; font-weight: 500; letter-spacing: 0px; text-transform: none; color: #1b1b1b;">
@@ -186,9 +186,9 @@
                                     <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr" style="padding-bottom: 25px;">
                                         <span
                                             class="gdlr-core-title-item-caption gdlr-core-info-font gdlr-core-skin-caption"
-                                            style="font-size: 14px; font-weight: 500; font-style: normal; letter-spacing: 3px; text-transform: uppercase; color: #d32525;"
+                                            style="font-size: 14px; font-weight: 500; font-style: normal; letter-spacing: 3px; text-transform: uppercase; color: #F5831C;"
                                         >
-                                            <span class="gdlr-core-title-item-caption-prefix" style="border-color: #d32525; height: 13px; margin-right: 14px;"></span>{{homeaboutus.headingTag}}
+                                            <span class="gdlr-core-title-item-caption-prefix" style="border-color: #F5831C; height: 13px; margin-right: 14px;"></span>{{homeaboutus.headingTag}}
                                         </span>
                                         <div class="gdlr-core-title-item-title-wrap">
                                             <h3 class="gdlr-core-title-item-title gdlr-core-skin-title" style="font-size: 45px; font-weight: 500; letter-spacing: 0px; text-transform: none; color: #1b1b1b;">
@@ -211,7 +211,7 @@
                                         <ul>
                                             <li class="gdlr-core-skin-divider clearfix" style="margin-bottom: 8px;">
                                                 <span class="gdlr-core-icon-list-icon-wrap gdlr-core-left" style="margin-top: 4px; margin-right: 10px;">
-                                                    <i class="gdlr-core-icon-list-icon icon-check" style="color: #d32525; font-size: 19px; width: 19px;"></i>
+                                                    <i class="gdlr-core-icon-list-icon icon-check" style="color: #F5831C; font-size: 19px; width: 19px;"></i>
                                                 </span>
                                                 <div class="gdlr-core-icon-list-content-wrap">
                                                     <span class="gdlr-core-icon-list-content" style="color: #1b1b1b; font-size: 19px; font-weight: 500; text-transform: none; letter-spacing: 0px;">
@@ -221,7 +221,7 @@
                                             </li>
                                             <li class="gdlr-core-skin-divider clearfix" style="margin-bottom: 8px;">
                                                 <span class="gdlr-core-icon-list-icon-wrap gdlr-core-left" style="margin-top: 4px; margin-right: 10px;">
-                                                    <i class="gdlr-core-icon-list-icon icon-check" style="color: #d32525; font-size: 19px; width: 19px;"></i>
+                                                    <i class="gdlr-core-icon-list-icon icon-check" style="color: #F5831C; font-size: 19px; width: 19px;"></i>
                                                 </span>
                                                 <div class="gdlr-core-icon-list-content-wrap">
                                                     <span class="gdlr-core-icon-list-content" style="color: #1b1b1b; font-size: 19px; font-weight: 500; text-transform: none; letter-spacing: 0px;">
@@ -231,7 +231,7 @@
                                             </li>
                                             <li class="gdlr-core-skin-divider clearfix" style="margin-bottom: 8px;">
                                                 <span class="gdlr-core-icon-list-icon-wrap gdlr-core-left" style="margin-top: 4px; margin-right: 10px;">
-                                                    <i class="gdlr-core-icon-list-icon icon-check" style="color: #d32525; font-size: 19px; width: 19px;"></i>
+                                                    <i class="gdlr-core-icon-list-icon icon-check" style="color: #F5831C; font-size: 19px; width: 19px;"></i>
                                                 </span>
                                                 <div class="gdlr-core-icon-list-content-wrap">
                                                     <span class="gdlr-core-icon-list-content" style="color: #1b1b1b; font-size: 19px; font-weight: 500; text-transform: none; letter-spacing: 0px;">
@@ -245,7 +245,7 @@
                                 <div class="gdlr-core-pbf-element">
                                     <div class="gdlr-core-button-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align" style="padding-bottom: 40px;">
                                         <a class="gdlr-core-button gdlr-core-button-transparent gdlr-core-left-align gdlr-core-button-with-border" href="{% url 'about' %}" id="gdlr-core-button-id-77414">
-                                            <span class="gdlr-core-content">Learn More</span><i class="gdlr-core-pos-right ion-ios-arrow-thin-right" style="font-size: 31px; color: #d32525;"></i>
+                                            <span class="gdlr-core-content">Learn More</span><i class="gdlr-core-pos-right ion-ios-arrow-thin-right" style="font-size: 31px; color: #F5831C;"></i>
                                         </a>
                                     </div>
                                 </div>
@@ -281,14 +281,14 @@
                                     <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr">
                                         <span
                                             class="gdlr-core-title-item-caption gdlr-core-info-font gdlr-core-skin-caption"
-                                            style="font-size: 14px; font-weight: 500; font-style: normal; letter-spacing: 3px; text-transform: uppercase; color: #d32525;"
+                                            style="font-size: 14px; font-weight: 500; font-style: normal; letter-spacing: 3px; text-transform: uppercase; color: #F5831C;"
                                         >
-                                            <span class="gdlr-core-title-item-caption-prefix" style="border-color: #d32525; height: 13px; margin-right: 14px;"></span>Big Name Customers
+                                            <span class="gdlr-core-title-item-caption-prefix" style="border-color: #F5831C; height: 13px; margin-right: 14px;"></span>Big Name Customers
                                         </span>
                                         <div class="gdlr-core-title-item-title-wrap">
                                             <h3 class="gdlr-core-title-item-title gdlr-core-skin-title" style="font-size: 45px; font-weight: 500; letter-spacing: 0px; text-transform: none; color: #ffffff;">
                                                 {{homewhyus.heading1}} <br />
-                                                <span style="color: #d32525;">{{homewhyus.heading2}}</span> {{homewhyus.heading3}}<span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span>
+                                                <span style="color: #F5831C;">{{homewhyus.heading2}}</span> {{homewhyus.heading3}}<span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span>
                                             </h3>
                                         </div>
                                     </div>
@@ -305,7 +305,7 @@
                                 <div class="gdlr-core-pbf-element">
                                     <div class="gdlr-core-button-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align" style="padding-bottom: 0px;">
                                         <a class="gdlr-core-button gdlr-core-button-transparent gdlr-core-left-align gdlr-core-button-no-border" href="tel: 0553628168" id="gdlr-core-button-id-27906">
-                                            <span class="gdlr-core-content">Call Now</span><i class="gdlr-core-pos-right ion-ios-arrow-thin-right" style="font-size: 31px; color: #d32525;"></i>
+                                            <span class="gdlr-core-content">Call Now</span><i class="gdlr-core-pos-right ion-ios-arrow-thin-right" style="font-size: 31px; color: #F5831C;"></i>
                                         </a>
                                     </div>
                                 </div>
@@ -366,7 +366,7 @@
                                 <div class="gdlr-core-pbf-element">
                                     <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr" style="padding-bottom: 50px;">
                                         <div class="gdlr-core-title-item-title-wrap">
-                                            <h3 class="gdlr-core-title-item-title gdlr-core-skin-title" style="font-size: 14px; font-weight: 500; letter-spacing: 2px; color: #d32525;">
+                                            <h3 class="gdlr-core-title-item-title gdlr-core-skin-title" style="font-size: 14px; font-weight: 500; letter-spacing: 2px; color: #F5831C;">
                                                 {{companysummary.title}}<span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span>
                                             </h3>
                                         </div>
@@ -377,7 +377,7 @@
                                         <div class="gdlr-core-divider-container" style="max-width: 110px;">
                                             <div
                                                 class="gdlr-core-divider-line gdlr-core-skin-divider"
-                                                style="border-color: #d32525; border-width: 3px; border-radius: 0px; -moz-border-radius: 0px; -webkit-border-radius: 0px;"
+                                                style="border-color: #F5831C; border-width: 3px; border-radius: 0px; -moz-border-radius: 0px; -webkit-border-radius: 0px;"
                                             ></div>
                                         </div>
                                     </div>
@@ -407,9 +407,9 @@
                                     <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr" style="padding-bottom: 0px;">
                                         <span
                                             class="gdlr-core-title-item-caption gdlr-core-info-font gdlr-core-skin-caption"
-                                            style="font-size: 14px; font-weight: 500; font-style: normal; letter-spacing: 3px; text-transform: uppercase; color: #d32525; margin-bottom: 0px;"
+                                            style="font-size: 14px; font-weight: 500; font-style: normal; letter-spacing: 3px; text-transform: uppercase; color: #F5831C; margin-bottom: 0px;"
                                         >
-                                            <span class="gdlr-core-title-item-caption-prefix" style="border-color: #d32525; height: 13px; margin-right: 14px;"></span>Picture of the company
+                                            <span class="gdlr-core-title-item-caption-prefix" style="border-color: #F5831C; height: 13px; margin-right: 14px;"></span>Picture of the company
                                         </span>
                                         <div class="gdlr-core-title-item-title-wrap">
                                             <h3 class="gdlr-core-title-item-title gdlr-core-skin-title" style="font-size: 42px; font-weight: 500; letter-spacing: 0px; text-transform: none; color: #1b1b1b;">
@@ -432,7 +432,7 @@
                                             href="{% url 'gallery' %}"
                                             id="gdlr-core-button-id-79271"
                                         >
-                                            <span class="gdlr-core-content">View Gallery</span><i class="gdlr-core-pos-right ion-ios-arrow-thin-right" style="font-size: 31px; color: #d32525;"></i>
+                                            <span class="gdlr-core-content">View Gallery</span><i class="gdlr-core-pos-right ion-ios-arrow-thin-right" style="font-size: 31px; color: #F5831C;"></i>
                                         </a>
                                     </div>
                                 </div>
@@ -539,7 +539,7 @@
                                                                 <div class="gdlr-core-testimonial-author-content">
                                                                     <div
                                                                         class="gdlr-core-testimonial-title gdlr-core-title-font gdlr-core-skin-title"
-                                                                        style="color: #d32525; font-size: 14px; font-weight: 600; letter-spacing: 1px; text-transform: uppercase;"
+                                                                        style="color: #F5831C; font-size: 14px; font-weight: 600; letter-spacing: 1px; text-transform: uppercase;"
                                                                     >
                                                                     {{testimonial.name}}
                                                                     </div>
@@ -583,9 +583,9 @@
                                     <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr" style="padding-bottom: 60px;">
                                         <span
                                             class="gdlr-core-title-item-caption gdlr-core-info-font gdlr-core-skin-caption"
-                                            style="font-size: 14px; font-weight: 500; font-style: normal; letter-spacing: 3px; text-transform: uppercase; color: #d32525;"
+                                            style="font-size: 14px; font-weight: 500; font-style: normal; letter-spacing: 3px; text-transform: uppercase; color: #F5831C;"
                                         >
-                                            <span class="gdlr-core-title-item-caption-prefix" style="border-color: #d32525; height: 13px; margin-right: 14px;"></span>Industry insights
+                                            <span class="gdlr-core-title-item-caption-prefix" style="border-color: #F5831C; height: 13px; margin-right: 14px;"></span>Industry insights
                                         </span>
                                         <div class="gdlr-core-title-item-title-wrap">
                                             <h3 class="gdlr-core-title-item-title gdlr-core-skin-title" style="font-size: 42px; font-weight: 500; letter-spacing: 0px; text-transform: none; color: #1b1b1b;">
@@ -691,7 +691,7 @@
                                                 border-radius: 33px;
                                                 -moz-border-radius: 33px;
                                                 -webkit-border-radius: 33px;
-                                                background: #d32525;
+                                                background: #F5831C;
                                             "
                                         >
                                             <span class="gdlr-core-content">Contact Us</span><i class="gdlr-core-pos-right ion-ios-arrow-thin-right" style="font-size: 31px; color: #ffffff;"></i>
