--- a/mainwebsite/templates/mainwebsite/services.html
+++ b/mainwebsite/templates/mainwebsite/services.html
@@ -39,7 +39,7 @@
                                 <div class="gdlr-core-pbf-element">
                                     <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr">
                                         <div class="gdlr-core-title-item-title-wrap">
-                                            <h3 class="gdlr-core-title-item-title gdlr-core-skin-title" style="font-size: 48px; font-weight: 300; letter-spacing: 0px; text-transform: none; color: #d32525;">
+                                            <h3 class="gdlr-core-title-item-title gdlr-core-skin-title" style="font-size: 48px; font-weight: 300; letter-spacing: 0px; text-transform: none; color: #F5831C;">
                                                 {{service.serviceTitle}}<span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span>
                                             </h3>
                                         </div>
@@ -59,7 +59,7 @@
                                 <div class="gdlr-core-pbf-element">
                                     <div class="gdlr-core-divider-item gdlr-core-divider-item-normal gdlr-core-item-pdlr gdlr-core-left-align" style="margin-bottom: 45px;">
                                         <div class="gdlr-core-divider-container" style="max-width: 80px;">
-                                            <div class="gdlr-core-divider-line gdlr-core-skin-divider" style="border-color: #d32525; border-width: 2px;"></div>
+                                            <div class="gdlr-core-divider-line gdlr-core-skin-divider" style="border-color: #F5831C; border-width: 2px;"></div>
                                         </div>
                                     </div>
                                 </div>
@@ -72,7 +72,7 @@
                                                 font-size: 18px;
                                                 font-weight: 500;
                                                 letter-spacing: 0px;
-                                                color: #d32525;
+                                                color: #F5831C;
                                                 padding: 15px 35px 15px 35px;
                                                 text-transform: none;
                                                 border-radius: 1px;
@@ -81,7 +81,7 @@
                                                 background: #f5f5f5;
                                             "
                                         >
-                                            <i class="gdlr-core-pos-left fa fa-file-pdf-o" style="font-size: 16px; color: #d32525;"></i><span class="gdlr-core-content">Download PDF</span>
+                                            <i class="gdlr-core-pos-left fa fa-file-pdf-o" style="font-size: 16px; color: #F5831C;"></i><span class="gdlr-core-content">Download PDF</span>
                                         </a>
                                     </div>
                                 </div>
@@ -96,9 +96,9 @@
                                     <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr" style="padding-bottom: 20px;">
                                         <span
                                             class="gdlr-core-title-item-caption gdlr-core-info-font gdlr-core-skin-caption"
-                                            style="font-size: 14px; font-weight: 500; font-style: normal; letter-spacing: 3px; text-transform: uppercase; color: #d32525;"
+                                            style="font-size: 14px; font-weight: 500; font-style: normal; letter-spacing: 3px; text-transform: uppercase; color: #F5831C;"
                                         >
-                                            <span class="gdlr-core-title-item-left-dot" style="width: 5px; height: 5px; background-color: #d32525; margin-right: 15px;"></span>{{service.serviceTag}}
+                                            <span class="gdlr-core-title-item-left-dot" style="width: 5px; height: 5px; background-color: #F5831C; margin-right: 15px;"></span>{{service.serviceTag}}
                                         </span>
                                         <div class="gdlr-core-title-item-title-wrap">
                                             <h3 class="gdlr-core-title-item-title gdlr-core-skin-title" style="font-size: 44px; font-weight: 500; letter-spacing: 0px; text-transform: none; color: #353535;">
@@ -146,7 +146,7 @@
                                 </div>
                                 <div class="gdlr-core-pbf-element">
                                     <div class="gdlr-core-divider-item gdlr-core-divider-item-normal gdlr-core-item-pdlr gdlr-core-right-align gdlr-core-style-vertical" style="margin-bottom: 0px;">
-                                        <div class="gdlr-core-divider-line gdlr-core-skin-divider" style="border-color: #d32525; height: 90px;"></div>
+                                        <div class="gdlr-core-divider-line gdlr-core-skin-divider" style="border-color: #F5831C; height: 90px;"></div>
                                     </div>
                                 </div>
                             </div>
@@ -160,9 +160,9 @@
                                     <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr" style="padding-bottom: 40px;">
                                         <span
                                             class="gdlr-core-title-item-caption gdlr-core-info-font gdlr-core-skin-caption"
-                                            style="font-size: 14px; font-weight: 500; font-style: normal; letter-spacing: 3px; text-transform: uppercase; color: #d32525;"
+                                            style="font-size: 14px; font-weight: 500; font-style: normal; letter-spacing: 3px; text-transform: uppercase; color: #F5831C;"
                                         >
-                                            <span class="gdlr-core-title-item-left-dot" style="width: 5px; height: 5px; background-color: #d32525; margin-right: 15px;"></span>Our Expertise
+                                            <span class="gdlr-core-title-item-left-dot" style="width: 5px; height: 5px; background-color: #F5831C; margin-right: 15px;"></span>Our Expertise
                                         </span>
                                         <div class="gdlr-core-title-item-title-wrap">
                                             <h3 class="gdlr-core-title-item-title gdlr-core-skin-title" style="font-size: 44px; font-weight: 500; letter-spacing: 0px; text-transform: none; color: #353535;">
@@ -258,7 +258,7 @@
                                                     border-radius: 28px;
                                                     -moz-border-radius: 28px;
                                                     -webkit-border-radius: 28px;
-                                                    background: #d32525;
+                                                    background: #F5831C;
                                                 "
                                             >
                                                 <span class="gdlr-core-content">Get Consult</span><i class="gdlr-core-pos-right ion-ios-arrow-thin-right" style="font-size: 31px; color: #ffffff;"></i>
