--- a/mainwebsite/templates/dashboard/base/accountbase.html
+++ b/mainwebsite/templates/dashboard/base/accountbase.html
@@ -9,8 +9,8 @@
       content="width=device-width, initial-scale=1.0, user-scalable=0"
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta content="Zhonghua Company Limited" name="description" />
-    <meta content="Zhonghua Company Limited" name="author" />
+    <meta content="Moonda Company Limited" name="description" />
+    <meta content="Moonda Company Limited" name="author" />
     <meta name="keywords" content="Zhonghua Company Limited" />
 
     <!-- Favicon -->
@@ -59,7 +59,7 @@
 
   <body
     style="
-      background-image: url({%static'dashboard/images/background/backgroundcompany.jpg'%});
+      background-image: url({% static 'dashboard/images/background/backgroundcompany.jpg'%});
       background-repeat: no-repeat;
       background-position: top center;
     "
